Various module tweaks.